# gnu-findutils

./: Makefile.in  aclocal.m4  config.h.in  config.rpath  configure
doc/: Makefile.in  find-maint.info  find.info  find.info-1  find.info-2  regexprops.texi  stamp-1  stamp-vti  version.texi
find/: Makefile.in
find/testsuite/: Makefile.in
gnulib/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
gnulib/lib/: Makefile.am  Makefile.in
gnulib/m4/: Makefile.am  Makefile.in  gnulib-comp.m4  gnulib.m4
gnulib/po/: Makefile.in
intl/: plural.c
lib/: Makefile.in
locate/: Makefile.in
locate/testsuite/: Makefile.in
m4/: Makefile.in
po/: be.gmo  be.po  bg.gmo  ca.gmo  ca.po  cs.gmo  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  eo.gmo  eo.po  es.gmo  es.po  et.gmo  et.po  fi.gmo  fi.po  findutils.pot  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  gl.po  hr.gmo  hr.po  hu.gmo  hu.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  lg.gmo  (+31 more)
xargs/: Makefile.in
xargs/testsuite/: Makefile.in
