# Process this file with autoconf to produce a configure script.
AC_INIT(dummy,0)
AM_INIT_AUTOMAKE

AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_GNU_SOURCE

gl_FUNC_ALLOCA


gl_DIRNAME

gl_ERROR

gl_FILEBLOCKS

gl_FILEMODE

# No macro. You should also use one of fnmatch-posix or fnmatch-gnu.

AM_FUNC_GETLINE

gl_GETOPT

AM_GNU_GETTEXT([external])

gl_HUMAN

gl_IDCACHE

jm_FUNC_LSTAT

jm_FUNC_MALLOC

jm_FUNC_MEMCMP

gl_FUNC_MEMSET

gl_FUNC_MKTIME

gl_MODECHANGE

gl_PATHMAX

gl_QUOTE

gl_QUOTEARG

jm_FUNC_REALLOC

gl_REGEX

gl_FUNC_RPMATCH

gl_SAVEDIR

jm_FUNC_STAT

gl_FUNC_STPCPY

gl_FUNC_STRDUP

jm_FUNC_GNU_STRFTIME

gl_FUNC_STRSTR

gl_FUNC_STRTOIMAX

gl_FUNC_STRTOL

gl_FUNC_STRTOLL

gl_FUNC_STRTOUL

gl_FUNC_STRTOULL

gl_FUNC_STRTOUMAX

jm_FUNC_GLIBC_UNLOCKED_IO

gl_XALLOC

gl_XGETCWD

gl_XSTRTOL

jm_XSTRTOUMAX

gl_YESNO


AC_OUTPUT([Makefile lib/Makefile m4/Makefile po/Makefile])
