## Process this file with automake to produce Makefile.in.

EXTRA_DIST =
EXTRA_DIST += alloca.m4
EXTRA_DIST += codeset.m4
EXTRA_DIST += dirname.m4
EXTRA_DIST += dos.m4
EXTRA_DIST += error.m4
EXTRA_DIST += fileblocks.m4
EXTRA_DIST += filemode.m4
EXTRA_DIST += fnmatch.m4
EXTRA_DIST += getcwd.m4
EXTRA_DIST += getline.m4
EXTRA_DIST += getopt.m4
EXTRA_DIST += gettext.m4
EXTRA_DIST += glibc21.m4
EXTRA_DIST += human.m4
EXTRA_DIST += iconv.m4
EXTRA_DIST += idcache.m4
EXTRA_DIST += intdiv0.m4
EXTRA_DIST += intmax_t.m4
EXTRA_DIST += inttypes_h.m4
EXTRA_DIST += inttypes.m4
EXTRA_DIST += inttypes-pri.m4
EXTRA_DIST += isc-posix.m4
EXTRA_DIST += lcmessage.m4
EXTRA_DIST += lib-ld.m4
EXTRA_DIST += lib-link.m4
EXTRA_DIST += lib-prefix.m4
EXTRA_DIST += longlong.m4
EXTRA_DIST += lstat.m4
EXTRA_DIST += malloc.m4
EXTRA_DIST += mbrtowc.m4
EXTRA_DIST += mbstate_t.m4
EXTRA_DIST += memcmp.m4
EXTRA_DIST += memset.m4
EXTRA_DIST += mktime.m4
EXTRA_DIST += modechange.m4
EXTRA_DIST += onceonly_2_57.m4
EXTRA_DIST += pathmax.m4
EXTRA_DIST += progtest.m4
EXTRA_DIST += quotearg.m4
EXTRA_DIST += quote.m4
EXTRA_DIST += realloc.m4
EXTRA_DIST += regex.m4
EXTRA_DIST += rpmatch.m4
EXTRA_DIST += savedir.m4
EXTRA_DIST += stat.m4
EXTRA_DIST += stdint_h.m4
EXTRA_DIST += stpcpy.m4
EXTRA_DIST += strdup.m4
EXTRA_DIST += strerror_r.m4
EXTRA_DIST += strftime.m4
EXTRA_DIST += strstr.m4
EXTRA_DIST += strtoimax.m4
EXTRA_DIST += strtoll.m4
EXTRA_DIST += strtol.m4
EXTRA_DIST += strtoull.m4
EXTRA_DIST += strtoul.m4
EXTRA_DIST += strtoumax.m4
EXTRA_DIST += tm_gmtoff.m4
EXTRA_DIST += uintmax_t.m4
EXTRA_DIST += ulonglong.m4
EXTRA_DIST += unlocked-io.m4
EXTRA_DIST += xalloc.m4
EXTRA_DIST += xgetcwd.m4
EXTRA_DIST += xstrtol.m4
EXTRA_DIST += xstrtoumax.m4
EXTRA_DIST += yesno.m4
